Update testing notes

--- a/docs/internal-developers/testing/releases/800.md
+++ b/docs/internal-developers/testing/releases/800.md
@@ -4,18 +4,9 @@ Zip file for testing: [woocommerce-gutenberg-products-block.zip](https://github.
 
 ## Feature plugin and package inclusion in WooCommerce
 
-### Enhancement: Make form components require onChange and have a default value. ([6636](https://github.com/woocommerce/woocommerce-blocks/pull/6636))
-
-1. Check out this branch.
-2. Create a new page with All Products block, Filter Products By Price Block and Filter Products By Attribute Block.
-3. Go to the All Products page, ensure you're able to sort products and filter products by price and attribute.
-4. Add a product to the cart.
-5. Go to the Checkout block page.
-6. Ensure you're able to use radio controls.
-
 ### Enhancement: Footer Template Parts use now `<footer>` instead of `<div>` and Header uses `<header>` instead of `<div>`. ([6596](https://github.com/woocommerce/woocommerce-blocks/pull/6596))
 
-1. Go to a Woo page and view the source.
+1. Go to a WooCommerce page and view the source.
 2. Check the header is wrapped in a `<header>` tag, not in a `<div>` tag.
 3. Check the footer is wrapped in a `<footer>` tag, not in a `<div>` tag.
 
@@ -24,6 +15,23 @@ Zip file for testing: [woocommerce-gutenberg-products-block.zip](https://github.
 1. Create a page and add a `Products by Tag` block.
 2. Check that is rendered correctly in the editor.
 3. Save the page and check that is rendered correctly in the frontend.
+
+### Fix: Ensure WooCommerce templates show correct titles. ([6452](https://github.com/woocommerce/woocommerce-blocks/pull/6452))
+
+1. Go to `Appearance → Editor → Browse all templates`.
+2. Make sure you have `archive-product.html` in your theme's templates directory.
+3. Notice the `archive-product.html` template shows the correct title and description.
+
+## Feature plugin only
+
+### Enhancement: Make form components require onChange and have a default value. ([6636](https://github.com/woocommerce/woocommerce-blocks/pull/6636))
+
+1. Check out this branch.
+2. Create a new page with `All Products` block, `Filter Products By Price` block and `Filter Products By Attribute` block.
+3. Go to the `All Products` page, ensure you're able to sort products and filter products by price and attribute.
+4. Add a product to the cart.
+5. Go to the `Checkout` block page.
+6. Ensure you're able to use radio controls.
 
 ### Fix: Correctly calculate taxes for local pickups. ([6631](https://github.com/woocommerce/woocommerce-blocks/pull/6631))
 
@@ -34,27 +42,17 @@ Zip file for testing: [woocommerce-gutenberg-products-block.zip](https://github.
 5. Add a payment option (e.g., `Cash on delivery`).
 6. Add a physical product to the cart.
 7. Use an outside state address on the front-end. (e.g., `60 29th Street #343, 35005 Birmingham, AL, USA`).
-8. Go to the Cart block and select the `Local pickup` shipping method. Check that we have a tax of 10% applied.
-9. Go to the Checkout block and select the `Local pickup` shipping method. Check that we have a tax of 10% applied.
+8. Go to the `Cart` block and select the `Local pickup` shipping method. Check that we have a tax of 10% applied.
+9. Go to the `Checkout` block and select the `Local pickup` shipping method. Check that we have a tax of 10% applied.
 10. Place your order. Check on the `Order received` page that the displayed **tax is actually added to the total**.
 11. Go to `Edit Order`. Check that **taxes were applied correctly there as well**.
-12. On Checkout again, select `Flat rate`, using the same external address, and make sure **taxes are not applied**.
+12. On the `Checkout` again, select `Flat rate`, using the same external address, and make sure **taxes are not applied**.
 
 ### Fix: Update billing address when shipping address gets change in Cart block. ([6591](https://github.com/woocommerce/woocommerce-blocks/pull/6591))
 
-1. Add a product to cart and go to the Cart block.
-2. Add a new address in the Shipping calculator, different from what you already used.
-3. Wait for the update and click Proceed to checkout.
-4. In the Checkout block, see the new address for shipping being added to the Shipping address.
+1. Add a product to cart and go to the `Cart` block.
+2. Add a new address in the shipping calculator, different from what you already used.
+3. Wait for the update and click `Proceed to checkout`.
+4. In the `Checkout` block, see the new address for shipping being added to the Shipping address.
 5. Uncheck the checkbox for Use same address for billing.
 6. Look at the Billing address form and confirm it has the same address which was selected in the shipping calculator.
-
-### Fix: Ensure WooCommerce templates show correct titles. ([6452](https://github.com/woocommerce/woocommerce-blocks/pull/6452))
-
-1. Go to `Appearance → Editor → Browse all templates`.
-2. Make sure you have `archive-product.html` in your theme's templates directory.
-3. Notice the `archive-product.html` template shows the correct title and description.
-
-## Feature plugin only
-
-n/a
