Update testing notes

--- a/docs/internal-developers/testing/releases/800.md
+++ b/docs/internal-developers/testing/releases/800.md
@@ -18,20 +18,20 @@ Zip file for testing: [woocommerce-gutenberg-products-block.zip](https://github.
 
 ### Fix: Ensure WooCommerce templates show correct titles. ([6452](https://github.com/woocommerce/woocommerce-blocks/pull/6452))
 
-1. Go to `Appearance → Editor → Browse all templates`.
-2. Make sure you have `archive-product.html` in your theme's templates directory.
-3. Notice the `archive-product.html` template shows the correct title and description.
+1. Install and activate the [Extendable theme](https://wordpress.org/themes/extendable/).
+2. Go to `Appearance → Editor → Browse all templates`.
+3. Make sure you have `archive-product.html` in your theme's templates directory.
+4. Notice the templates shows the correct title and description and not the file name like e.g. `archive-product.html`.
 
 ## Feature plugin only
 
 ### Enhancement: Make form components require onChange and have a default value. ([6636](https://github.com/woocommerce/woocommerce-blocks/pull/6636))
 
-1. Check out this branch.
-2. Create a new page with `All Products` block, `Filter Products By Price` block and `Filter Products By Attribute` block.
-3. Go to the `All Products` page, ensure you're able to sort products and filter products by price and attribute.
-4. Add a product to the cart.
-5. Go to the `Checkout` block page.
-6. Ensure you're able to use radio controls.
+1. Create a new page with `All Products` block, `Filter Products By Price` block and `Filter Products By Attribute` block.
+2. Go to the `All Products` page, ensure you're able to sort products and filter products by price and attribute.
+3. Add a product to the cart.
+4. Go to the `Checkout` block page.
+5. Ensure you're able to use radio controls.
 
 ### Fix: Correctly calculate taxes for local pickups. ([6631](https://github.com/woocommerce/woocommerce-blocks/pull/6631))
 
