--- a/docs/internal-developers/testing/releases/840.md
+++ b/docs/internal-developers/testing/releases/840.md
@@ -99,7 +99,8 @@ To test this feature you need the latest trunk of WooCommerce, or WooCommerce 6.
 10. Select the block or one of its inner blocks, start the flow again.
 11. It should work, confirm that by visiting the frontend.
 
-![video](https://user-images.githubusercontent.com/6165348/183219991-4b904273-67ef-43e1-94fb-7498531f104f.mov)
+<video src="https://user-images.githubusercontent.com/6165348/183219991-4b904273-67ef-43e1-94fb-7498531f104f.mov" controls="controls" style="max-width: 730px;">
+</video>
 
 ### Register product search as a core/search variation when available. ([6191](https://github.com/woocommerce/woocommerce-blocks/pull/6191))
 
@@ -113,7 +114,8 @@ To test this feature you need the latest trunk of WooCommerce, or WooCommerce 6.
 8. Save and see the block functions flawlessly on the front end.
 9. Edit the header again, try adding the Product Search block, only variation is available in the inserter. The legacy can't be found and inserted from the inserter.
 
-![video](https://user-images.githubusercontent.com/5423135/181692749-8ce8ea51-824a-49c3-97e3-fc1c05130fdb.mov)
+<video src="https://user-images.githubusercontent.com/5423135/181692749-8ce8ea51-824a-49c3-97e3-fc1c05130fdb.mov" controls="controls" style="max-width: 730px;">
+</video>
 
 ### Fixed a bug with a class name deriving from a translatable string. ([6914](https://github.com/woocommerce/woocommerce-blocks/pull/6914))
 
