Update testing instructions for 8.3.2

--- a/docs/internal-developers/testing/releases/832.md
+++ b/docs/internal-developers/testing/releases/832.md
@@ -6,7 +6,7 @@ Zip file for testing: [woocommerce-gutenberg-products-block.zip](https://github.
 
 ### Fix Best Selling Products block ordering ([7025](https://github.com/woocommerce/woocommerce-blocks/pull/7025))
 
-1. Place a test order on a product if you haven't done so already on your store.
+1. Place a test order on a product if you haven't done so already on your store. Make sure you mark this order as complete in WooCommerce > Orders after checkout.
 2. Add Best Selling Products block to a page.
 3. Check on the frontend that they're correctly ordered.
 
