--- a/docs/internal-developers/testing/releases/851.md
+++ b/docs/internal-developers/testing/releases/851.md
@@ -1,6 +1,6 @@
 # Testing notes and ZIP for release 8.5.1
 
-Zip file for testing: [woocommerce-gutenberg-products-block.zip]()
+Zip file for testing: [woocommerce-gutenberg-products-block.zip](https://github.com/woocommerce/woocommerce-blocks/files/9633294/woocommerce-gutenberg-products-block.zip)
 
 ## Feature plugin and package inclusion in WooCommerce
 
