--- a/docs/internal-developers/testing/releases/851.md
+++ b/docs/internal-developers/testing/releases/851.md
@@ -7,7 +7,7 @@ Zip file for testing: [woocommerce-gutenberg-products-block.zip](https://github.
 ### Fix a bug in which resource hinting was breaking cart in subfolder installs. ([7211](https://github.com/woocommerce/woocommerce-blocks/pull/7211))
 
 
-1. Add an item to cart.
-2. Load any page, open source code.
-3. You should not see any scripts loaded with a relative url.
-
+1. Make sure Gutenberg is disabled.
+2. Add an item to cart.
+3. Go to any frontend page, and view the page source.
+4. In that source page, search for scripts starting with `/wp-includes`, you shouldn't see any relative links in them, e.g. /wp-includes/js/dist/vendor/lodash.min.js, but that everything starts with a full link, e.g. <https://example.com/wp-includes/js/dist/vendor/lodash.min.js>.
