Cherry picked Add filter-link-button mixin #7357 and updated testing instructions

--- a/docs/internal-developers/testing/releases/870.md
+++ b/docs/internal-developers/testing/releases/870.md
@@ -380,3 +380,27 @@ GET** `/wc/store/v1/cart`. ([5953](https://github.com/woocommerce/woocommerce-bl
 3. Observe the `I want to receive updates about products and promotions.` checkbox in the customer information block. Ensure it only displays once.
 4. Save the page and ensure the newsletter signup block is still only shown once.
 5. Visit the block on the front-end and ensure the newsletter signup block only shows once.
+
+### Improve visual consistency between block links. ([7357](https://github.com/woocommerce/woocommerce-blocks/pull/7357))
+
+| Before | After |
+| ------ | ----- |
+|   <img width="299" alt="CleanShot 2022-10-07 at 16 02 20@2x" src="https://user-images.githubusercontent.com/20469356/194635589-3c7f80a8-22d2-487d-b800-9b51f586d34e.png">   |   <img width="289" alt="CleanShot 2022-10-07 at 16 04 34@2x" src="https://user-images.githubusercontent.com/20469356/194635923-b8cdf40c-60be-4168-ba85-0a21a5dd593d.png">  |
+
+#### User Facing Testing
+
+1. Create a regular page (Pages > Add New) and add the All Product block to it;
+2. Add the Active Filters block;
+3. Add the Filter By Attribute block;
+4. Select an attribute from the Filter By Attribute block and apply it;
+5. When the page reloads, check if the "Clear All" button (in the Active Filters block) and the "Reset" button (in Filter By Attribute block) have the following properties:
+
+> Font size: 14px
+> Font weight: normal
+> Text decoration: underlined
+
+6. Hover the mouse over the "Clear All" button and the "Reset" button and make sure the text decoration is changed to `none` (no underline) while the other properties remain the same:
+
+> Font size: 14px
+> Font weight: normal
+> Text decoration: none
