Minor formatting fix on the release instructions

--- a/docs/internal-developers/testing/releases/870.md
+++ b/docs/internal-developers/testing/releases/870.md
@@ -257,9 +257,7 @@ modes
 
 8. Save the page, see all filter blocks continue functioning as expected on the front end.
 
-### StoreApi requests will return a `Cart-Token` header that can be used to retrieve the cart from the corresponding session via **
-
-GET** `/wc/store/v1/cart`. ([5953](https://github.com/woocommerce/woocommerce-blocks/pull/5953))
+### StoreApi requests will return a `Cart-Token` header that can be used to retrieve the cart from the corresponding session via **GET** `/wc/store/v1/cart`. ([5953](https://github.com/woocommerce/woocommerce-blocks/pull/5953))
 
 #### User Facing Testing
 
