Cherry picked: Fix a problem that causes an infinite loop when inserting Cart block in wordpress.com (7367)

--- a/docs/internal-developers/testing/releases/870.md
+++ b/docs/internal-developers/testing/releases/870.md
@@ -389,3 +389,13 @@ modes
 > Font size: 14px
 > Font weight: normal
 > Text decoration: none
+
+### Fix a problem that causes an infinite loop when inserting Cart block in wordpress.com ([7367](https://github.com/woocommerce/woocommerce-blocks/pull/7367))
+
+#### User Facing Testing
+
+1. Get a zip of this plugin (from below) and upload it to a wordpress.com website.
+2. Go to the editor and try to insert Cart, it should work.
+3. Make sure no block is missing.
+
+<img width="1279" alt="image" src="https://user-images.githubusercontent.com/14235870/195155762-297acdd8-6180-4231-ba9a-5fac07092cc4.png">
