--- a/docs/internal-developers/testing/releases/872.md
+++ b/docs/internal-developers/testing/releases/872.md
@@ -4,4 +4,4 @@ Zip file for testing: [woocommerce-gutenberg-products-block.zip](https://github.
 
 ## Feature plugin and package inclusion in WooCommerce
 
-### - Fixed a problem where Custom Order Tables compatibility declaration could fail due to the unpredictable plugin order load. ([7395](https://github.com/woocommerce/woocommerce-blocks/pull/7395))
+### Fixed a problem where Custom Order Tables compatibility declaration could fail due to the unpredictable plugin order load ([7395](https://github.com/woocommerce/woocommerce-blocks/pull/7395))
