--- a/docs/internal-developers/testing/releases/872.md
+++ b/docs/internal-developers/testing/releases/872.md
@@ -5,3 +5,8 @@ Zip file for testing: [woocommerce-gutenberg-products-block.zip](https://github.
 ## Feature plugin and package inclusion in WooCommerce
 
 ### Fixed a problem where Custom Order Tables compatibility declaration could fail due to the unpredictable plugin order load ([7395](https://github.com/woocommerce/woocommerce-blocks/pull/7395))
+
+#### User Facing Testing
+
+1. Refer to [High Performance Order Storage Upgrade Recipe Book](https://github.com/woocommerce/woocommerce/wiki/High-Performance-Order-Storage-Upgrade-Recipe-Book) on how to enable HPOS
+2. Ensure no incompatibility warnings are displayed regarding the Blocks plugin
