Change Filter Wrapper to Filter Block
Co-authored-by: Tung Du <dinhtungdu@gmail.com>

--- a/docs/internal-developers/testing/releases/890.md
+++ b/docs/internal-developers/testing/releases/890.md
@@ -16,9 +16,9 @@ Zip file for testing: [woocommerce-gutenberg-products-block.zip](https://github.
 2. Deactivate WooCommerce Blocks, activate Storefront.
 3. Go to Appearance > Widgets and add filter widgets to a widget area.
 4. Update WooCommerce to latest version and activate WooCommerce Blocks.
-5. Go to Appearance > Widgets, and open the transform menu for a filter widget. See Filter Wrapper as an option.
-6. Hover on the Filter Wrapper, see the preview of corresponding filter blocks.
-7. Click the Filter Wrapper, see the widget converted to filter blocks.
+5. Go to Appearance > Widgets, and open the transform menu for a filter widget. See Filter Block as an option.
+6. Hover on the Filter Block, see the preview of corresponding filter blocks.
+7. Click the Filter Block, see the widget converted to filter blocks.
 
 ### Add white background to Filter by Attribute block dropdown so text is legible in dark backgrounds ([7506](https://github.com/woocommerce/woocommerce-blocks/pull/7506))
 
