Remove Light from test instructions
Co-authored-by: Tung Du <dinhtungdu@gmail.com>

--- a/docs/internal-developers/testing/releases/890.md
+++ b/docs/internal-developers/testing/releases/890.md
@@ -84,7 +84,7 @@ Zip file for testing: [woocommerce-gutenberg-products-block.zip](https://github.
 ### Fix Mini Cart Block global styles ([7515](https://github.com/woocommerce/woocommerce-blocks/pull/7515))
 
 1. Enable TT3 theme.
-2. Go to Appearance > Site Editor and replace the header with `WooCommerce Essential Header | Light` pattern.
+2. Go to Appearance > Site Editor and replace the header with `WooCommerce Essential Header` pattern.
 3. Save and visit the frontend.
 4. Hover over the Mini Cart and be sure that the font size doesn't change.
 5. Edit some settings related to the Mini Cart Global Styles.
