--- a/docs/internal-developers/testing/releases/872.md
+++ b/docs/internal-developers/testing/releases/872.md
@@ -20,3 +20,13 @@ Zip file for testing: [woocommerce-gutenberg-products-block.zip](https://github.
 3. Go to Checkout block Editor, and confirm `Use same address for billing` toggle is working as expected.
 4. Go to the Checkout block front-end, and confirm shipping address form is not visible.
 5. Change the billing address, confirm the shipping address in the order summary gets changed, and shipping methods are updated.
+<!-- FEEDBACK -->
+
+---
+
+[We're hiring!](https://woocommerce.com/careers/) Come work with us!
+
+🐞 Found a mistake, or have a suggestion? [Leave feedback about this document here.](https://github.com/woocommerce/woocommerce-blocks/issues/new?assignees=&labels=type%3A+documentation&template=--doc-feedback.md&title=Feedback%20on%20./docs/internal-developers/testing/releases/872.md)
+
+<!-- /FEEDBACK -->
+
