--- a/docs/internal-developers/testing/releases/875.md
+++ b/docs/internal-developers/testing/releases/875.md
@@ -78,3 +78,13 @@ Zip file for testing: [woocommerce-gutenberg-products-block.zip](https://github.
 2. Add the All Products block with the Filter by Attribute block next to it in a post or page.
 2. Visit the post or page and interact with the Filter by Attribute block.
 3. Verify the background of the input has white background, so text is legible.
+<!-- FEEDBACK -->
+
+---
+
+[We're hiring!](https://woocommerce.com/careers/) Come work with us!
+
+🐞 Found a mistake, or have a suggestion? [Leave feedback about this document here.](https://github.com/woocommerce/woocommerce-blocks/issues/new?assignees=&labels=type%3A+documentation&template=--doc-feedback.md&title=Feedback%20on%20./docs/internal-developers/testing/releases/875.md)
+
+<!-- /FEEDBACK -->
+
