--- a/docs/internal-developers/testing/releases/880.md
+++ b/docs/internal-developers/testing/releases/880.md
@@ -17,3 +17,13 @@ Zip file for testing: [woocommerce-gutenberg-products-block.zip](https://github.
 2. Setup the cart block for use on the site.
 3. Verify there are no errors when displaying the cart in the editor or on the frontend (especially around any shipping options).
 
+<!-- FEEDBACK -->
+
+---
+
+[We're hiring!](https://woocommerce.com/careers/) Come work with us!
+
+🐞 Found a mistake, or have a suggestion? [Leave feedback about this document here.](https://github.com/woocommerce/woocommerce-blocks/issues/new?assignees=&labels=type%3A+documentation&template=--doc-feedback.md&title=Feedback%20on%20./docs/internal-developers/testing/releases/880.md)
+
+<!-- /FEEDBACK -->
+
