--- a/docs/internal-developers/testing/releases/881.md
+++ b/docs/internal-developers/testing/releases/881.md
@@ -15,3 +15,13 @@ Zip file for testing: [woocommerce-gutenberg-products-block.zip](https://github.
 6. Navigate to the cart block. 
 7. Apply the gift card you previously copied. You should see: 1) an indication that the gift card was applied, 2) a bullet bubble with the gift card number in this format `XXXX-XXX-XXX-XXX` and 3) updated cart totals that include the gift card discount. 
 8. Remove the gift card. You should see that the cart totals are restored. 
+<!-- FEEDBACK -->
+
+---
+
+[We're hiring!](https://woocommerce.com/careers/) Come work with us!
+
+🐞 Found a mistake, or have a suggestion? [Leave feedback about this document here.](https://github.com/woocommerce/woocommerce-blocks/issues/new?assignees=&labels=type%3A+documentation&template=--doc-feedback.md&title=Feedback%20on%20./docs/internal-developers/testing/releases/881.md)
+
+<!-- /FEEDBACK -->
+
