--- a/docs/internal-developers/testing/releases/850.md
+++ b/docs/internal-developers/testing/releases/850.md
@@ -165,3 +165,13 @@ _**Note:** the text color settings for this block are driven by inline styles th
 
 
 
+<!-- FEEDBACK -->
+
+---
+
+[We're hiring!](https://woocommerce.com/careers/) Come work with us!
+
+🐞 Found a mistake, or have a suggestion? [Leave feedback about this document here.](https://github.com/woocommerce/woocommerce-blocks/issues/new?assignees=&labels=type%3A+documentation&template=--doc-feedback.md&title=Feedback%20on%20./docs/internal-developers/testing/releases/850.md)
+
+<!-- /FEEDBACK -->
+
