--- a/docs/internal-developers/testing/releases/874.md
+++ b/docs/internal-developers/testing/releases/874.md
@@ -11,3 +11,13 @@ Zip file for testing: [woocommerce-gutenberg-products-block.zip](https://github.
 1. Install latest Gutenberg plugin or WordPress 6.1.
 2. Install WooCommerce Gift Cards, or grab this plugin: [extension-for-testing.zip](https://github.com/woocommerce/woocommerce-blocks/files/9839394/extension-for-testing.1.zip)
 3. Add a new page. Add the Checkout block. Ensure the `Contact information` section loads, and ensure you do not see any errors where blocks should appear, both on the editor and the published checkout page.
+<!-- FEEDBACK -->
+
+---
+
+[We're hiring!](https://woocommerce.com/careers/) Come work with us!
+
+🐞 Found a mistake, or have a suggestion? [Leave feedback about this document here.](https://github.com/woocommerce/woocommerce-blocks/issues/new?assignees=&labels=type%3A+documentation&template=--doc-feedback.md&title=Feedback%20on%20./docs/internal-developers/testing/releases/874.md)
+
+<!-- /FEEDBACK -->
+
