Update testing instructions

--- a/docs/internal-developers/testing/releases/876.md
+++ b/docs/internal-developers/testing/releases/876.md
@@ -1,10 +1,10 @@
 # Testing notes and ZIP for release 8.7.6
 
-Zip file for testing: [woocommerce-gutenberg-products-block.zip](https://github.com/woocommerce/woocommerce-blocks/files/10133695/woocommerce-gutenberg-products-block.zip)
+Zip file for testing: [woocommerce-gutenberg-products-block.zip](https://github.com/woocommerce/woocommerce-blocks/files/10134947/woocommerce-gutenberg-products-block.zip)
 
 ## Feature plugin and package inclusion in WooCommerce
 
-### Mini Cart block: fix compatibility with Page Optimize and Product Bundles plugins [#7794](https://github.com/woocommerce/woocommerce-blocks/pull/7794)
+### Mini Cart block: fix compatibility with Page Optimize and Product Bundles plugins [#7794](https://github.com/woocommerce/woocommerce-blocks/pull/7794) [#7813](https://github.com/woocommerce/woocommerce-blocks/pull/7813)
 
 1. Install [Page Optimize](https://wordpress.org/plugins/page-optimize/) and [Product Bundles](https://woocommerce.com/products/product-bundles/).
 2. Enable a block theme.
