--- a/docs/internal-developers/testing/releases/910.md
+++ b/docs/internal-developers/testing/releases/910.md
@@ -14,15 +14,14 @@ Zip file for testing: [woocommerce-gutenberg-products-block.zip](https://github.
 
 ### Add to Cart Button: Add support for the alignment setting. ([7816](https://github.com/woocommerce/woocommerce-blocks/pull/7816))
 
-1. Add the Product Query block to a page.
+1. Add the Product (Beta) block to a page.
 2. Add the Add to Cart Button block.
 3. Make sure that you can set the alignment to left, center and right.
 4. Make sure all options work both in the editor and on the page.
 
 ### Products block: Make the block available to the users of the feature plugin. ([7815](https://github.com/woocommerce/woocommerce-blocks/pull/7815))
 
-1. Build the project (or download the `zip` file provided in the PR) without the development flags.
-2. Open the inserter in the editor.
+1. Open the inserter in the editor.
 2. Make sure the block appears as “Products (Beta)“ instead of “Product Query” and has a “Stacks” icon instead of “Sparkles” icon. Icon should still be purple.
 3. Add the block and select it.
 4. Make sure the description says: “A block that displays a selection of products in your store.”
@@ -30,15 +29,9 @@ Zip file for testing: [woocommerce-gutenberg-products-block.zip](https://github.
 6. Make sure the default inner blocks are as follows:
 
 - Product Image
-- On-Sale Badge
-- Product Stock Indicator
 - Post Title
-- Product SKU
 - Product Price
-- Product Rating
 - Add to Cart Button
-- Product categories
-- Product tags
 
 
 ### Add "Product Hero 2 Column 2 Row" commerce adjacent pattern. ([7814](https://github.com/woocommerce/woocommerce-blocks/pull/7814))
@@ -58,7 +51,7 @@ Zip file for testing: [woocommerce-gutenberg-products-block.zip](https://github.
 
 ### Product Rating: Add support for the alignment setting. ([7790](https://github.com/woocommerce/woocommerce-blocks/pull/7790))
 
-1. Add the Product Query block to a page.
+1. Add the Products (Beta) block to a page.
 2. Add the Product Rating block.
 3. Make sure that you can set the alignment to left, center and right.
 4. Make sure all options work both in the editor and on the page.
@@ -71,7 +64,7 @@ Zip file for testing: [woocommerce-gutenberg-products-block.zip](https://github.
 
 ### Product Query: Add support for filtering by attributes within the block. ([7743](https://github.com/woocommerce/woocommerce-blocks/pull/7743))
 
-1. Go to the editor and add a “Product Query” block.
+1. Go to the editor and add a “Product (Beta) block.
 2. Ensure a new “Product Attributes” input is accessible via the “Advanced Filters” panel in the inspector controls.
 3. Ensure that the input autocompletes with all the available terms for your store in the format `${Taxonomy}: ${Term}`.
 4. Ensure that when selecting the attributes, the products filter in the editor.
@@ -132,7 +125,7 @@ Check at least briefly other blocks of a WooCommerce that could be influenced by
 
 ### Product Price: Fix the alignment setting. ([7795](https://github.com/woocommerce/woocommerce-blocks/pull/7795))
 
-1. Add the Product Query block to a page.
+1. Add the Product (Beta) block to a page.
 2. Add the Product Price block.
 3. Make sure that you can set the alignment to left, center and right.
 4. Make sure all options work both in the editor and on the page.
@@ -259,9 +252,9 @@ Check at least briefly other blocks of a WooCommerce that could be influenced by
 
 Repeat the above steps, but for Footer Block
 
-### Fix: Product Query editor preview with Stock Status setting. ([7682](https://github.com/woocommerce/woocommerce-blocks/pull/7682))
+### Fix: Product (Beta) editor preview with Stock Status setting. ([7682](https://github.com/woocommerce/woocommerce-blocks/pull/7682))
 
-1. Add the Product Query block to a new page.
+1. Add the Product (Beta) block to a new page.
 2. Change the stock status setting.
 3. See the editor preview updates on changing the stock status setting.
 4. Add the Sale status filter, see the editor preview updates on changing on sale setting as well.
