add testing instructions about #7947

--- a/docs/internal-developers/testing/releases/911.md
+++ b/docs/internal-developers/testing/releases/911.md
@@ -260,3 +260,10 @@ Make sure for any of the scenarios no PHP errors and notices are being generated
 3. See products are ordered by title.
 4. Open the sidebar setting.
 5. See the Popular Filters setting is expanded by default and the `Sorted by title` is selected.
+
+### Atomic Blocks: fix ancestor definition ([7947](https://github.com/woocommerce/woocommerce-blocks/pull/7947))
+
+1. Go to Editor
+2. Add an All Products block
+3. Enter the "Edit the layout of each product" mode (click on the pencil icon)
+4. Be sure that it is possible to add atomic blocks.
