--- a/docs/internal-developers/testing/releases/911.md
+++ b/docs/internal-developers/testing/releases/911.md
@@ -222,7 +222,7 @@ Steps:
 ### Product Elements: Fix block settings ([7914](https://github.com/woocommerce/woocommerce-blocks/pull/7914))
 
 1. Create a page and add the **Products (Beta)** block.
-2. Add **Button**, **Price** and **Rating** product elements.
+2. Add **Add to Cart Button**, **Price** and **Rating** product elements.
 3. Customize via block settings:
 
 - **Product Price**: `background color` and `appearance`.
