--- a/docs/internal-developers/testing/releases/911.md
+++ b/docs/internal-developers/testing/releases/911.md
@@ -205,7 +205,7 @@ Prerequisites:
 
 Steps:
 
-1. Go to Editor and add blocks:
+1. Go to the Appearance > Editor and edit the Product Catalog template:
 
 - Filter by Rating
 - All Products,
