--- a/docs/internal-developers/testing/releases/911.md
+++ b/docs/internal-developers/testing/releases/911.md
@@ -248,10 +248,11 @@ Make sure for any of the scenarios no PHP errors and notices are being generated
 
 ### Update MiniCart.php to fix price total amount on page load prices are including tax ([7832](https://github.com/woocommerce/woocommerce-blocks/pull/7832))
 
-1. Go to WooCommerce > Settings and set _Display prices during cart and checkout_ to _Including tax_.
-![Settings screenshot](https://user-images.githubusercontent.com/3616980/206694476-39bda20b-c653-4703-978d-3d7f746c2bf5.png)
-2. Create a post or page and add the Mini Cart block.
-3. In the frontend, hover the Mini Cart block with the mouse and notice the price doesn't update ([before](https://user-images.githubusercontent.com/3616980/206694129-c16fcea4-8ac4-4bd7-a72a-221946c3ef08.webm) and [after](https://user-images.githubusercontent.com/3616980/206694060-eee1cccf-1ebd-435d-995d-23caca715918.webm)).
+1. In WooCommerce > Settings check _Enable tax rates and calculations_.
+2. In the _Tax_ tab that appears go to _Tax options_ and  set _Display prices during cart and checkout_ to _Including tax_.
+3. In _Standard rates_, create a tax rate with `Rate %` of `10`.
+4. Create a post or page and add the Mini Cart block.
+5. In the frontend, hover the Mini Cart block with the mouse and notice the price doesn't update ([before](https://user-images.githubusercontent.com/3616980/206694129-c16fcea4-8ac4-4bd7-a72a-221946c3ef08.webm) and [after](https://user-images.githubusercontent.com/3616980/206694060-eee1cccf-1ebd-435d-995d-23caca715918.webm)).
 
 ### Product Query: Add `Sorted by title` preset. ([7949](https://github.com/woocommerce/woocommerce-blocks/pull/7949))
 
