--- a/docs/internal-developers/testing/releases/911.md
+++ b/docs/internal-developers/testing/releases/911.md
@@ -216,6 +216,12 @@ Steps:
 
 **Expected:**
 
+
+| Case | Before | After |
+| ------ | ----- | ----- |
+|   Products block (was: left-aligned Ratings)     |    <img width="332" alt="image" src="https://user-images.githubusercontent.com/20098064/207349105-62ff7ee4-49d3-4f0e-aa3f-d906f1bf2b3d.png">   |   <img width="334" alt="image" src="https://user-images.githubusercontent.com/20098064/207348578-04970b79-cb8d-497d-823b-71d9eaa88bbe.png">   |
+|   Classic Template (was: inlined Ratings and Price)     |  <img width="237" alt="image" src="https://user-images.githubusercontent.com/20098064/207349319-f7020e66-4c77-4ea9-a991-151cabd515ac.png">     |   <img width="247" alt="image" src="https://user-images.githubusercontent.com/20098064/207348409-4465be9d-529d-49db-a056-e4c3f844a6e6.png">   |
+
 - The layout of product in Products and Classic Template is as on the screenshots above
 - The layout of the Filter by Rating and All Products doesn't change
 
@@ -225,9 +231,9 @@ Steps:
 2. Add **Add to Cart Button**, **Price** and **Rating** product elements.
 3. Customize via block settings:
 
-- **Product Price**: `background color` and `appearance`.
-- **Product Button**: `font-weight` and `padding`.
-- **Product Rating**: `font-size`, `margin`, `color`.
+- **Product Price**:  `Color > background`, `Color > text ` and `Typography > appearance`.
+- **Product Button**: `Typography > font Weight` and `Dimension > padding`.
+- **Product Rating**: `Typography > font Size`, `Dimension > margin`, `Color > text`.
 
 4. Ensure all customizations display correctly both in the editor and the page (frontend).
 
